feat(restaurant): criando fluxo de criação de restaurante
Criando estrtura base para criar um restaurante e seus testes